--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,303 @@
+# ================================================
+# PYTHON
+# ================================================
+
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
+
+# C extensions
+*.so
+
+# Distribution / packaging
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+pip-wheel-metadata/
+share/python-wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
+
+# PyInstaller
+*.manifest
+*.spec
+
+# Installer logs
+pip-log.txt
+pip-delete-this-directory.txt
+
+# Unit test / coverage reports
+htmlcov/
+.tox/
+.nox/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+*.py,cover
+.hypothesis/
+.pytest_cache/
+
+# Translations
+*.mo
+*.pot
+
+# Django stuff:
+*.log
+local_settings.py
+db.sqlite3
+db.sqlite3-journal
+
+# Flask stuff:
+instance/
+.webassets-cache
+
+# Scrapy stuff:
+.scrapy
+
+# Sphinx documentation
+docs/_build/
+
+# PyBuilder
+target/
+
+# Jupyter Notebook
+.ipynb_checkpoints
+*/.ipynb_checkpoints/*
+
+# IPython
+profile_default/
+ipython_config.py
+
+# pyenv
+.python-version
+
+# pipenv
+Pipfile.lock
+
+# PEP 582
+__pypackages__/
+
+# Celery stuff
+celerybeat-schedule
+celerybeat.pid
+
+# SageMath parsed files
+*.sage.py
+
+# Environments
 .env
-db.py
-__pycache__
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+
+# Spyder project settings
+.spyderproject
+.spyproject
+
+# Rope project settings
+.ropeproject
+
+# mkdocs documentation
+/site
+
+# mypy
+.mypy_cache/
+.dmypy.json
+dmypy.json
+
+# Pyre type checker
+.pyre/
+
+# ================================================
+# IDEs
+# ================================================
+
+# VSCode
+.vscode/
+*.code-workspace
+
+# PyCharm
+.idea/
+*.iml
+*.iws
+
+# Sublime Text
+*.sublime-project
+*.sublime-workspace
+
+# ================================================
+# SISTEMA OPERATIVO
+# ================================================
+
+# macOS
+.DS_Store
+.AppleDouble
+.LSOverride
+._*
+
+# Windows
+Thumbs.db
+Thumbs.db:encryptable
+ehthumbs.db
+ehthumbs_vista.db
+*.stackdump
+[Dd]esktop.ini
+$RECYCLE.BIN/
+*.lnk
+
+# Linux
+*~
+.fuse_hidden*
+.directory
+.Trash-*
+.nfs*
+
+# ================================================
+# DATOS
+# ================================================
+
+# Datos crudos (archivos grandes)
+data/raw/atom/*.atom
+data/raw/*.xml
+data/raw/*.zip
+
+# Datos procesados (opcional: comentar si se quieren versionar)
+# data/processed/*.parquet
+# data/processed/*.csv
+
+# Datos temporales
+data/interim/*
+data/temp/*
+
+# Archivos de backup
+*.bak
+*.backup
+*.old
+
+# Bases de datos locales
+*.db
+*.sqlite
+*.sqlite3
+
+# Archivos grandes (opcional)
+*.parquet
+*.csv
+# Excepciones para archivos pequeños importantes
+!localidades.csv
+
+# ================================================
+# NOTEBOOKS
+# ================================================
+
+# Outputs de Jupyter (opcional)
+# Descomentar si no quieres versionar outputs
+# *.ipynb
+
+# Checkpoints
+.ipynb_checkpoints/
+
+# ================================================
+# LOGS Y REPORTES
+# ================================================
+
+# Logs
+logs/
+*.log
+*.log.*
+
+# Reportes
+reports/*.html
+reports/*.pdf
+
+# ================================================
+# CONFIGURACIÓN SENSIBLE
+# ================================================
+
+# Variables de entorno
+.env
+.env.local
+.env.*.local
+
+# Credenciales
+credentials.json
+secrets.json
+*.pem
+*.key
+
+# Configuración de base de datos local
+config/database.yml
+config/local_settings.py
+
+# ================================================
+# POWER BI
+# ================================================
+
+# Archivos temporales de Power BI
+*.pbix.tmp
+*.pbit.tmp
+
+# ================================================
+# OTROS
+# ================================================
+
+# Archivos comprimidos
+*.zip
+*.tar.gz
+*.rar
+*.7z
+
+# Documentos temporales
+~$*.doc*
+~$*.xls*
+~$*.ppt*
+
+# Archivos de Excel temporales
+*.xlk
+~$*.xls*
+
+# ================================================
+# DIRECTORIO DE OUTPUTS (si es temporal)
+# ================================================
+
+# Descomentar si outputs/ es solo para desarrollo local
+# outputs/
+
+# ================================================
+# CACHE
+# ================================================
+
+# Cache de pandas
+*.pkl
+*.pickle
+
+# Cache general
+.cache/
+cache/
+
+# ================================================
+# NOTAS
+# ================================================
+
+# Archivos de notas personales
+TODO.md
+NOTES.md
+scratch/
